tests/func/grammar/test_meta_data_terminal_meta_data_must_be_key_value.err
4:54: syntax error: unexpected tokens NotComment(};), }
    3 |     terminals
    4 |     a: 'a' {dynamic, 1, label: 'My Label', not_allowed};
      |                                                       ^^^ expected: :